# Daily_News_Report

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
daily_news_report/notebooks/: dev_retrieve.ipynb
daily_news_report/src/: format_data.py  retrieve_data.py
tests/: test_retrieve_data.py
