[tool.poetry]
name = "daily-news-report"
version = "0.1.0"
description = ""
authors = ["Matthias Schäfer <matsch1@gmx.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
deutschland = {version = "^0.3.2", extras = ["tagesschau"]}
python-dotenv = "^1.0.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
pytest = "^7.4.2"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
